Figured out the spacing issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,3 +12,12 @@
 p, h1, h2, h3, a, span, li, aside {
     color: #FFFFFF;
 }
+
+/* Set sitewide spacing rules */
+body {
+    margin: 5% auto;
+    font-size: 16px;
+    line-height: 1.8;
+    max-width: 75%;
+    font-family: Arial, sans-serif;
+}
